exports[`test Changes output on value change manipulation 1`] = `
<TextField
  autoComplete="off"
  autoFocus={false}
  disable={false}
  displayLength={false}
  error={null}
  errorSubInfo={null}
  id="text-field"
  inputStyle="inline"
  isRequired={true}
  label="TextField"
  labelHidden={false}
  maxLength={500}
  multiLine={false}
  name="text-field"
  onBlur={null}
  onChange={null}
  pattern=""
  placeholder=""
  query={Object {}}
  requiredLabel="required"
  rows={5}
  title=""
  type="text"
  value="test">
  <div
    className="formGroup inline paddingTop">
    <InfoLabel
      displayLength={false}
      inputValue="UGH"
      maxLength={500}
      requiredLabel="required">
      <span
        className="controlNote controlLabelRequired">
        required
      </span>
    </InfoLabel>
    <label
      className="controlLabel"
      htmlFor="text-field">
      TextField
    </label>
    <div
      className="inputContainer">
      <input
        autoComplete="off"
        autoFocus={false}
        className="formControl"
        disabled={false}
        id="text-field"
        maxLength={500}
        name="text-field"
        onBlur={[Function]}
        onChange={[Function]}
        pattern=""
        placeholder=""
        required={true}
        title=""
        type="text"
        value="UGH" />
    </div>
  </div>
</TextField>
`;

exports[`test Renders A TextField with visible character counter without crashing 1`] = `
<div
  className="formGroup inline paddingTop">
  <span
    className="controlNote controlLabelRequired">
    <strong>
      5
    </strong>
    /
    500
  </span>
  <label
    className="controlLabel"
    htmlFor="text-field">
    TextField
  </label>
  <div
    className="inputContainer">
    <input
      autoComplete="off"
      autoFocus={false}
      className="formControl"
      disabled={false}
      id="text-field"
      maxLength={500}
      name="text-field"
      onBlur={[Function]}
      onChange={[Function]}
      pattern=""
      placeholder=""
      required={true}
      title=""
      type="text"
      value="test2" />
  </div>
</div>
`;

exports[`test Renders TextField with an error message without crashing 1`] = `
<div
  className="formGroup inline paddingTop">
  <span
    className="controlNote controlLabelRequired">
    required
  </span>
  <label
    className="controlLabel controlLabelError"
    htmlFor="text-field">
    TextField
  </label>
  <div
    className="inputContainer">
    <input
      autoComplete="off"
      autoFocus={false}
      className="formControl formControlError"
      disabled={false}
      id="text-field"
      maxLength={500}
      name="text-field"
      onBlur={[Function]}
      onChange={[Function]}
      pattern=""
      placeholder=""
      required={true}
      title=""
      type="text"
      value="test" />
    <span
      className="error">
      <strong
        className="info">
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`test Renders TextField with multiline without crashing 1`] = `
<div
  className="formGroup inline paddingTop">
  <span
    className="controlNote controlLabelRequired">
    required
  </span>
  <label
    className="controlLabel"
    htmlFor="text-field">
    TextField
  </label>
  <div
    className="inputContainer">
    <textarea
      autoFocus={false}
      className="formControl textarea"
      disabled={false}
      id="text-field"
      maxLength={500}
      name="text-field"
      onBlur={[Function]}
      onChange={[Function]}
      pattern=""
      placeholder=""
      required={true}
      rows={5}
      value="test2" />
  </div>
</div>
`;

exports[`test Renders TextField without crashing 1`] = `
<div
  className="formGroup inline paddingTop">
  <span
    className="controlNote controlLabelRequired">
    required
  </span>
  <label
    className="controlLabel"
    htmlFor="text-field">
    TextField
  </label>
  <div
    className="inputContainer">
    <input
      autoComplete="off"
      autoFocus={false}
      className="formControl"
      disabled={false}
      id="text-field"
      maxLength={500}
      name="text-field"
      onBlur={[Function]}
      onChange={[Function]}
      pattern=""
      placeholder=""
      required={true}
      title=""
      type="text"
      value="test" />
  </div>
</div>
`;

exports[`test Renders a medium size Textfield with multiline without crashing 1`] = `
<div
  className="formGroup mediumSize">
  <label
    className="controlLabel controlLabelMediumSize"
    htmlFor="text-field">
    TextField
  </label>
  <div
    className="inputContainer">
    <input
      autoComplete="off"
      autoFocus={false}
      className="formControl"
      disabled={false}
      id="text-field"
      maxLength={500}
      name="text-field"
      onBlur={[Function]}
      onChange={[Function]}
      pattern=""
      placeholder=""
      required={false}
      title=""
      type="text"
      value="" />
  </div>
</div>
`;
